force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/Creditsafe_Company_Financial_Statement__c.object-meta.xml
<CustomObject>
    <description>Information on a financial statement.</description>
    <label>Creditsafe Company Financial Statement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Financial Statement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Financial Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>