force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Bank_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Bank_Liabilities__c</fullName>
    <description>Amount due within one year owing to banks for overdrafts and loans.</description>
    <label>Bank Liabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>