force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Bank_Liabilities_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Bank_Liabilities_Due_After1year__c</fullName>
    <description>Amount due after one year owing to banks for overdrafts and loans.</description>
    <label>Bank Liabilities Due After1year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>