force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Called_Up_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Called_Up_Share_Capital__c</fullName>
    <description>The issued and paid share capital from shareholders.</description>
    <label>Called Up Share Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>