force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <description>Cash at bank, cash in hand and cash equivalents.</description>
    <label>Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>