force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Consolidated_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Accounts__c</fullName>
    <description>Are the accounts consolidated.</description>
    <label>Consolidated Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>