force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Creditor_Days__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Days__c</fullName>
    <description>Trade Creditors / Turnover x 365 days.  This is a calculation that predicts the average time taken for the company to settle its invoices for goods and services provided by it suppliers.</description>
    <label>Creditor Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>