force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Financial Statements</relationshipLabel>
    <relationshipName>Financial_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>