force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Current_Debt_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Debt_Ratio__c</fullName>
    <description>Total Current Liabilities / Shareholders Funds.  This measures the amount of short term debt in relation to the value of shareholders funds.</description>
    <label>Current Debt Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>