force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Current_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio__c</fullName>
    <description>Total Current Assets / Total Current Liabilities.  This is an indication of a company’s ability to meet short-term debt obligations; the higher the ratio, the more liquid the company is.</description>
    <label>Current Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>