force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Debtor_Days__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Days__c</fullName>
    <description>Trade Debtors / Turnover x 365 days.  This is a calculation that predicts the average time taken for the company to collect its invoices for goods and services provided to its customers.</description>
    <label>Debtor Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>