force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <description>The amount written off Tangible Fixed Assets during the year.</description>
    <label>Depreciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>