force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Dividends__c.field-meta.xml
<CustomField>
    <fullName>Dividends__c</fullName>
    <description>The total amount of profits distributed to shareholders.</description>
    <label>Dividends</label>
    <length>255</length>
    <type>Text</type>
</CustomField>