force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Equity_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Equity_In_Percentage__c</fullName>
    <description>Shareholder Funds / (Total Current Assets + Tangible Fixed Assets) x 100.  This ratio shows the worth of the company (shareholders funds) as a percentage of total current and tangible assets.</description>
    <label>Equity In Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>