force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Financial_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Financial_Expenses__c</fullName>
    <description>Interest expenses incurred during the year.</description>
    <label>Financial Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>