force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Financial_Income__c.field-meta.xml
<CustomField>
    <fullName>Financial_Income__c</fullName>
    <description>Interest income earned during the year.</description>
    <label>Financial Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>