force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Finished_Goods__c.field-meta.xml
<CustomField>
    <fullName>Finished_Goods__c</fullName>
    <description>Goods held that are ready for sale or use.</description>
    <label>Finished Goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>