force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Gearing__c.field-meta.xml
<CustomField>
    <fullName>Gearing__c</fullName>
    <description>Bank Overdraft &amp; Loans + Total Long Term Liabilities/Shareholders funds x 100.  This is the relationship between the size of the companies debt in proportion to Equity (Shareholders Funds).</description>
    <label>Gearing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>