force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Goodwill__c</fullName>
    <description>The premium paid or accumulated on the purchase of an asset.</description>
    <label>Goodwill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>