force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Group_Payables__c.field-meta.xml
<CustomField>
    <fullName>Group_Payables__c</fullName>
    <description>Amounts due within one year to related businesses.</description>
    <label>Group Payables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>