force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Group_Payables_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Group_Payables_Due_After1year__c</fullName>
    <description>Amounts due after one year to related businesses.</description>
    <label>Group Payables Due After1year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>