force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Group_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Group_Receivables__c</fullName>
    <description>Amounts due within one year from related businesses.</description>
    <label>Group Receivables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>