force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Investments__c.field-meta.xml
<CustomField>
    <fullName>Investments__c</fullName>
    <description>Long term investments including shares and securities.</description>
    <label>Investments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>