force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Land_And_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Land_And_Buildings__c</fullName>
    <description>Land and buildings owned by the company for long term use.</description>
    <label>Land And Buildings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>