force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Liquidity_Ratio_Or_Acid_Test__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Ratio_Or_Acid_Test__c</fullName>
    <description>Current assets - Stocks/Current Liabilities.  This, like the current ratio, measures how quickly in the short term a company can meet its debts.  However, this ratio excludes stock as there is no guarantee the value of Stocks can be realised quickly.</description>
    <label>Liquidity Ratio Or Acid Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>