force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Loans_To_Group__c.field-meta.xml
<CustomField>
    <fullName>Loans_To_Group__c</fullName>
    <description>Long term loans made by the company to related businesses.</description>
    <label>Loans To Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>