force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Miscellaneous_Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Fixed_Assets__c</fullName>
    <description>Long term assets other than Tangible Assets, Intangible Assets, Investments or Loans.</description>
    <label>Miscellaneous Fixed Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>