force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Miscellaneous_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Liabilities__c</fullName>
    <description>Other amounts due within one year owing by the company.</description>
    <label>Miscellaneous Liabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>