force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Miscellaneous_Liabilities_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Liabilities_Due_After1year__c</fullName>
    <description>Other amounts due after one year owing by the company.</description>
    <label>Miscellaneous Liabilities Due_After1year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>