force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Miscellaneous_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Receivables__c</fullName>
    <description>Amounts due within one year owing to the company other than trade and group receivables.</description>
    <label>Miscellaneous Receivables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>