force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <description>Often referred to as the ‘book value’ of the business this equals Shareholders Funds less Intangible Assets.</description>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>