force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Number_Of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Weeks__c</fullName>
    <description>Number of weeks in the year.</description>
    <label>Number Of Weeks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>