force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Operating_Costs__c.field-meta.xml
<CustomField>
    <fullName>Operating_Costs__c</fullName>
    <description>Costs incurred in the general running of the business.</description>
    <label>Operating Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>