force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Operating_Profit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Profit__c</fullName>
    <description>The results of the company after deducting Operating Costs from its Revenue.</description>
    <label>Operating Profit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>