force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Appropriations__c.field-meta.xml
<CustomField>
    <fullName>Other_Appropriations__c</fullName>
    <description>Other miscellaneous items that are deducted / added to affect the Retained Profit / Loss of a company.</description>
    <label>Other Appropriations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>