force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Current_Assets__c</fullName>
    <description>Any short term assets that have not already been included as Inventory, Receivables or Cash.</description>
    <label>Other Current Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>