force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Intangible_Assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Intangible_Assets__c</fullName>
    <description>Intangible fixed assets other than goodwill such as Trade Marks, Patents, Research &amp; Development etc.</description>
    <label>Other Intangible Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>