force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Inventories__c.field-meta.xml
<CustomField>
    <fullName>Other_Inventories__c</fullName>
    <description>Other amounts classed as Inventory but not included above.</description>
    <label>Other Inventories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>