force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Loans__c.field-meta.xml
<CustomField>
    <fullName>Other_Loans__c</fullName>
    <description>Other long term loans made by the company.</description>
    <label>Other Loans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>