force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Loans_Or_Finance_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Other_Loans_Or_Finance_Due_After1year__c</fullName>
    <description>Loans or finance due after one year owing to parties other than banks or related businesses.</description>
    <label>Other Loans Or Finance Due After1year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>