force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Other_Reserves__c</fullName>
    <description>Other capital and reserves that form part of shareholders equity.</description>
    <label>Other Reserves</label>
    <length>255</length>
    <type>Text</type>
</CustomField>