force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Other_Tangible_Assets__c.field-meta.xml
<CustomField>
    <fullName>Other_Tangible_Assets__c</fullName>
    <description>Tangible fixed assets other than Land &amp; Buildings or Plant &amp; Machinery.</description>
    <label>Other Tangible Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>