force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Pension_Costs__c.field-meta.xml
<CustomField>
    <fullName>Pension_Costs__c</fullName>
    <description>The cost of pension benefits for employees of the company.</description>
    <label>Pension Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>