force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Plant_And_Machinery__c.field-meta.xml
<CustomField>
    <fullName>Plant_And_Machinery__c</fullName>
    <description>Plant and machinery owned by the company for long term use.</description>
    <label>Plant And Machinery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>