force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Pre_Tax_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Profit_Margin__c</fullName>
    <description>Pre-tax profits / Turnover x 100.  This shows the percentage of Profit on each pound of sales or the equivalent of retailers ‘mark-up’.</description>
    <label>Pre Tax Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>