force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Profit_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profit_Before_Tax__c</fullName>
    <description>The results of the company before deducting any charge for taxation.</description>
    <label>Profit Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>