force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Raw_Materials__c.field-meta.xml
<CustomField>
    <fullName>Raw_Materials__c</fullName>
    <description>Materials held by the company that have not yet been processed.</description>
    <label>Raw Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>