force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Receivables_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Receivables_Due_After1year__c</fullName>
    <description>Amounts due after one year owing to the company (including trade and group receivables due after one year).</description>
    <label>Receivables Due After1year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>