force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Retained_Profit__c.field-meta.xml
<CustomField>
    <fullName>Retained_Profit__c</fullName>
    <description>The results of the company after all income and expenses have been credited /debited.</description>
    <label>Retained Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>