force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Return_On_Capital_Employed__c.field-meta.xml
<CustomField>
    <fullName>Return_On_Capital_Employed__c</fullName>
    <description>Pre-Tax Profit / Capital Employed x 100.  This ratio measures the profits a business yields in return for the money (Capital) invested.</description>
    <label>Return On Capital Employed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>