force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Return_On_Net_Assets_Employed__c.field-meta.xml
<CustomField>
    <fullName>Return_On_Net_Assets_Employed__c</fullName>
    <description>Pre-Tax Profits / Net Assets x 100.  This shows the ‘return’ in percent on the net assets of the company.  The higher the percentage the more profitable the company.</description>
    <label>Return On Net Assets Employed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>