force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Return_On_Total_Assets_Employed__c.field-meta.xml
<CustomField>
    <fullName>Return_On_Total_Assets_Employed__c</fullName>
    <description>Pre-Tax Profits / Total Assets x 100.  This shows the ‘return’ or ‘profit’ on each pound of Assets used as a percentage.</description>
    <label>Return On Total Assets Employed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>