force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Income earned from normal business activities, including the sale of goods and services.</description>
    <label>Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>