force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Revenue_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Reserves__c</fullName>
    <description>The accumulation of profits/losses from previous trading periods.</description>
    <label>Revenue Reserves</label>
    <length>255</length>
    <type>Text</type>
</CustomField>