force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Sales_Or_Net_Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Sales_Or_Net_Working_Capital__c</fullName>
    <description>Turnover / (Total Current Assets - Total Current Liabilities).  The higher the ratio the higher the volume of Sales made per the companies working capital.</description>
    <label>Sales Or Net Working Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>