force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Share_Premium__c.field-meta.xml
<CustomField>
    <fullName>Share_Premium__c</fullName>
    <description>The excess of the amount received on the issue of shares over their value.</description>
    <label>Share Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>