force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Stock_Turnover_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Stock_Turnover_Ratio__c</fullName>
    <description>Stocks / Turnover x 100.  This shows the number of times the trading stock of a company is ‘turned over’ in a trading period.  If the ratio is low this indicates that relatively little money is tied up in Stocks.</description>
    <label>Stock Turnover Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>