force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Taxation payable on the profits of the company.</description>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>