force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <description>The total of Current and Fixed Assets.</description>
    <label>Total Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>