force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Assets__c</fullName>
    <description>The total of Stocks, Debtors, Cash and other assets due within one year.</description>
    <label>Total Current Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>