force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Current_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Liabilities__c</fullName>
    <description>Total short term liabilities of the company.</description>
    <label>Total Current Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>