force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Debt_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_Ratio__c</fullName>
    <description>Total Short Term &amp; Long Term Debt / Shareholder Funds x 100.  This shows the relative indebtedness of a company in relation to the worth of the company.</description>
    <label>Total Debt Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>