force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Fixed_Assets__c</fullName>
    <description>The total of Tangible and Intangible Assets.</description>
    <label>Total Fixed Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>