force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/total_Intangible_Assets__c.field-meta.xml
<CustomField>
    <fullName>total_Intangible_Assets__c</fullName>
    <description>Assets that have a value but no physical existence.</description>
    <label>total Intangible Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>