force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Inventories__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventories__c</fullName>
    <description>The total of stocks held by the company and work in progress.</description>
    <label>Total Inventories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>