force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <description>The total of Total Long Term Liabilities and Total Current Liabilities.</description>
    <label>Total Liabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>