force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Other_Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Fixed_Assets__c</fullName>
    <description>Total long term assets other than Tangible Assets or Intangible Assets.</description>
    <label>Total Other Fixed Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>