force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Total_Receivables__c</fullName>
    <description>Total amounts receivable by the company.</description>
    <label>Total Receivables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>