force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Shareholders_Equity__c.field-meta.xml
<CustomField>
    <fullName>Total_Shareholders_Equity__c</fullName>
    <description>The total capital and reserves of the company.</description>
    <label>Total Shareholders Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>