force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Total_Tangible_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Tangible_Assets__c</fullName>
    <description>Physical assets owned by the company for long term use.</description>
    <label>Total Tangible Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>