force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Trade_Payables__c.field-meta.xml
<CustomField>
    <fullName>Trade_Payables__c</fullName>
    <description>Amount due within one year owing to suppliers for goods and services provided on credit.</description>
    <label>Trade Payables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>