force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Trade_Payables_Due_After1year__c.field-meta.xml
<CustomField>
    <fullName>Trade_Payables_Due_After1year__c</fullName>
    <description>Amount due after one year owing to suppliers for goods and services provided on credit.</description>
    <label>Trade Payables Due After1year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>