force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Trade_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Trade_Receivables__c</fullName>
    <description>Amounts due within one year from customers for goods and services supplied on credit.</description>
    <label>Trade Receivables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>