force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of financial statement.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>