force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Wages_And_Salaries__c.field-meta.xml
<CustomField>
    <fullName>Wages_And_Salaries__c</fullName>
    <description>Wages and salaries paid to employees of the company.</description>
    <label>Wages And Salaries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>