force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Work_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Work_In_Progress__c</fullName>
    <description>Goods or contracts that are in the process of manufacture or completion.</description>
    <label>Work In Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>