force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <description>Total Current Assets less Total Current Liabilities.  This represents the surplus/deficit of funds from normal trading activities.</description>
    <label>Working Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>