force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/fields/Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Date__c</fullName>
    <description>Year to which the annual account relates to.</description>
    <label>Year End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>