force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/recordTypes/Financial_Statements.recordType-meta.xml
<RecordType>
    <fullName>Financial_Statements</fullName>
    <active>true</active>
    <label>Financial Statements</label>
</RecordType>