force-app/main/default/objects/Creditsafe_Company_Financial_Statement__c/recordTypes/Local_Financial_Statements.recordType-meta.xml
<RecordType>
    <fullName>Local_Financial_Statements</fullName>
    <active>true</active>
    <label>Local Financial Statements</label>
</RecordType>